--- a/manuscript/manuscript-lda.tex
+++ b/manuscript/manuscript-lda.tex
@@ -96,21 +96,19 @@ grestore
 
 \titlerunning{The state learner}        % if too long for running head
 
-\author{Anders Munch         \and
-        Thomas~A.~Gerds %etc.
-}
+\author{Blinded author}
 
 %\authorrunning{Short form of author list} % if too long for running head
 
-\institute{Anders Munch \at
-              Section of Biostatistics, University of Copenhagen, Denmark \\
-              % Tel.: +123-45-678910\\
-              % Fax: +123-45-678910\\
-              \email{a.munch@sund.ku.dk}           %  \\
-%             \emph{Present address:} of F. Author  %  if needed
-              \and %
-              Thomas~A.~Gerds %
-              \at Section of Biostatistics, University of Copenhagen, Denmark}
+% \institute{Anders Munch \at
+%               Section of Biostatistics, University of Copenhagen, Denmark \\
+%               % Tel.: +123-45-678910\\
+%               % Fax: +123-45-678910\\
+%               \email{a.munch@sund.ku.dk}           %  \\
+% %             \emph{Present address:} of F. Author  %  if needed
+%               \and %
+%               Thomas~A.~Gerds %
+%               \at Section of Biostatistics, University of Copenhagen, Denmark}
 
 \date{Received: date / Accepted: date}
 % The correct dates will be entered by the editor
