use cases section draft

--- a/manuscript/bib.bib
+++ b/manuscript/bib.bib
@@ -1615,5 +1615,6 @@
   author       = {Anders Munch},
   year         = 2024,
   school       = {University of Copenhagen},
-  type         = {PhD thesis}
+  type         = {PhD thesis},
+  url={https://publichealth.ku.dk/about-the-department/biostat/phd-theses/2023_munch.pdf}
 }
